# bevy_blackout

./: Cargo.toml  README.md
examples/: simple.rs
src/: blackout.wgsl  lib.rs  material.rs
